fix: minor css issues on mobile resolution

--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -35,7 +35,7 @@
 		-webkit-print-color-adjust: exact;
 	}
 
-	.section-title .fas {
+	.section-title .fa-stack {
 		display: none;
 	}
 }
